// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendrer advarsel hvis man overfører fler dager enn man kan 1`] = `
<DocumentFragment>
  <div
    class="resultatContainer"
  >
    <div
      class="alertstripe alertstripe--advarsel"
    >
      <span
        class="alertstripe__ikon"
      >
        <span
          class="sr-only"
        >
          advarsel
        </span>
        <svg
          focusable="false"
          height="1.5em"
          kind="advarsel-sirkel-fyll"
          viewBox="0 0 24 24"
          width="1.5em"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M12.205-.004l-.214.002a12.225 12.225 0 0 0-8.517 3.659C1.179 5.977-.053 9.013.002 12.208c.115 6.613 5.296 11.793 11.795 11.793l.212-.002c6.726-.116 12.105-5.595 11.99-12.21C23.883 5.178 18.702-.003 12.204-.003z"
              fill="#FFA733"
              fill-rule="nonzero"
            />
            <path
              d="M12.027 19H12A1.499 1.499 0 0 1 11.973 16L12 16a1.501 1.501 0 0 1 .027 3z"
              fill="#3E3832"
            />
            <path
              d="M12 5a1 1 0 0 1 1 1v7a1 1 0 0 1-2 0V6a1 1 0 0 1 1-1z"
              fill="#3E3832"
              fill-rule="nonzero"
            />
          </g>
        </svg>
      </span>
      <div
        class="typo-normal alertstripe__tekst"
      >
        Brukeren har overført/fordelt 11 normaldager, men har kun 0 dager som kan fordeles/overføres. Vennligst sjekk antallet
      </div>
    </div>
    <div
      class="alertstripe alertstripe--advarsel"
    >
      <span
        class="alertstripe__ikon"
      >
        <span
          class="sr-only"
        >
          advarsel
        </span>
        <svg
          focusable="false"
          height="1.5em"
          kind="advarsel-sirkel-fyll"
          viewBox="0 0 24 24"
          width="1.5em"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M12.205-.004l-.214.002a12.225 12.225 0 0 0-8.517 3.659C1.179 5.977-.053 9.013.002 12.208c.115 6.613 5.296 11.793 11.795 11.793l.212-.002c6.726-.116 12.105-5.595 11.99-12.21C23.883 5.178 18.702-.003 12.204-.003z"
              fill="#FFA733"
              fill-rule="nonzero"
            />
            <path
              d="M12.027 19H12A1.499 1.499 0 0 1 11.973 16L12 16a1.501 1.501 0 0 1 .027 3z"
              fill="#3E3832"
            />
            <path
              d="M12 5a1 1 0 0 1 1 1v7a1 1 0 0 1-2 0V6a1 1 0 0 1 1-1z"
              fill="#3E3832"
              fill-rule="nonzero"
            />
          </g>
        </svg>
      </span>
      <div
        class="typo-normal alertstripe__tekst"
      >
        Brukeren har overført 11 koronadager, men har kun 10 koronadager som kan overføres. Vennligst sjekk antallet
      </div>
    </div>
    <div
      class="resultatHeader"
    >
      <p
        class="typo-element"
      >
        Brukeren har rett på
      </p>
      <p
        class="typo-element dagerOmsorg"
      >
        -2 dager med omsorgspenger
      </p>
    </div>
    <table
      class="tabell tabell--stripet"
    >
      <thead>
        <tr>
          <th />
          <th>
            Dager
          </th>
          <th>
            Korona-tillegg
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Grunnrett
          </td>
          <td>
            10
          </td>
          <td
            class="koronabakgrunn"
          >
            10
          </td>
        </tr>
        <tr>
          <td>
            Barn med kronisk sykdom
          </td>
          <td>
            -
          </td>
          <td
            class="koronabakgrunn"
          >
            -
          </td>
        </tr>
        <tr>
          <td>
            Aleneomsorg for barn med kronisk sykdom
          </td>
          <td>
            -
          </td>
          <td
            class="koronabakgrunn"
          >
            -
          </td>
        </tr>
        <tr>
          <td>
            Alene om omsorgen
          </td>
          <td>
            -
          </td>
          <td
            class="koronabakgrunn"
          >
            -
          </td>
        </tr>
        <tr>
          <td>
            Overført/Mottatt
          </td>
          <td>
            -11
          </td>
          <td
            class="koronabakgrunn"
          >
            -11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Rendrer riktig resultat 1`] = `
<DocumentFragment>
  <div
    class="resultatContainer"
  >
    <div
      class="resultatHeader"
    >
      <p
        class="typo-element"
      >
        Brukeren har rett på
      </p>
      <p
        class="typo-element dagerOmsorg"
      >
        90 dager med omsorgspenger
      </p>
    </div>
    <table
      class="tabell tabell--stripet"
    >
      <thead>
        <tr>
          <th />
          <th>
            Dager
          </th>
          <th>
            Korona-tillegg
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Grunnrett
          </td>
          <td>
            15
          </td>
          <td
            class="koronabakgrunn"
          >
            15
          </td>
        </tr>
        <tr>
          <td>
            Barn med kronisk sykdom
          </td>
          <td>
            -
          </td>
          <td
            class="koronabakgrunn"
          >
            -
          </td>
        </tr>
        <tr>
          <td>
            Aleneomsorg for barn med kronisk sykdom
          </td>
          <td>
            20
          </td>
          <td
            class="koronabakgrunn"
          >
            20
          </td>
        </tr>
        <tr>
          <td>
            Alene om omsorgen
          </td>
          <td>
            10
          </td>
          <td
            class="koronabakgrunn"
          >
            10
          </td>
        </tr>
        <tr>
          <td>
            Overført/Mottatt
          </td>
          <td>
            -
          </td>
          <td
            class="koronabakgrunn"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
